--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -8,18 +8,12 @@
     <div>
         <h1><a href="/">Django Girls blog</a> </h1>
     </div>
-
-
-    <div>
-        <p>published: 04.05.2020, 23:01</p>
-        <h2><a href="">My first post</a></h2>
-        <p>Bla bla bla</p>
-    </div>
-
-    <div>
-        <p>published: 04.05.2020, 23:01</p>
-        <h2><a href="">My second post</a></h2>
-        <p>Bla bla bla</p>
-    </div>
+    {% for post in posts %}
+        <div>
+            <p>published: {{ post.published_date }}</p>
+            <h2><a href="">{{ post.title }}</a></h2>
+            <p>{{ post.text|linebreaksbr }}</p>
+        </div>
+    {% endfor %}
 </body>
 </html>
